@@ -1,10 +1,13 @@
 -server
--Xms{{ druid_router_heap_size }}
--Xmx{{ druid_router_heap_size }}
+-Xms{{ druid_configs[cluster].druid_router_heap_size }}
+-Xmx{{ druid_configs[cluster].druid_router_heap_size }}
 -XX:+UseG1GC
--XX:+ExitOnOutOfMemoryError
--XX:+UseG1GC
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+PrintGCTimeStamps
+-Xloggc:{{ druid_router_gc_logfile }}
+-XX:HeapDumpPath={{ druid_router_heap_dump_file }}
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
--Djava.io.tmpdir=var/tmp
+-Djava.io.tmpdir={{ druid_router_tmp_dir }}
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+-Dlog4j.configurationFile={{ druid_path }}conf/druid/{{ service }}/log4j2.xml
